[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/fonts/xolonium-fonts-4.1/ttf/Xolonium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scenes/PauseMenu.gd" type="Script" id=2]
[ext_resource path="res://objects/VolumeSlider.tscn" type="PackedScene" id=3]
[ext_resource path="C:/Users/Lone Wolf/Projects/Godot/GodotGameBase/assets/fonts/xolonium-fonts-4.1/ttf/Xolonium-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://util/buttonpress.gd" type="Script" id=5]
[ext_resource path="res://scenes/KeyChangeMenu.tscn" type="PackedScene" id=6]
[ext_resource path="res://objects/DifficultySlider.tscn" type="PackedScene" id=7]

[sub_resource type="DynamicFont" id=1]
size = 96
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 48
use_filter = true
extra_spacing_char = 1
font_data = ExtResource( 4 )

[node name="Pause Menu" type="Control"]
pause_mode = 2
margin_right = 1920.0
margin_bottom = 1080.0
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.603922 )

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -365.5
margin_top = 136.0
margin_right = 365.5
margin_bottom = 252.0
custom_fonts/font = SubResource( 1 )
text = "Game Paused"

[node name="VolumeSlider" parent="." instance=ExtResource( 3 )]
margin_left = 772.0
margin_top = 528.0
margin_right = 816.0
margin_bottom = 987.0

[node name="DifficultySlider" parent="." instance=ExtResource( 7 )]
margin_left = -784.0
margin_top = 540.0
margin_right = -740.0
margin_bottom = 999.0

[node name="Resume" type="Button" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -157.0
margin_top = 339.0
margin_right = 119.0
margin_bottom = 411.0
custom_fonts/font = SubResource( 2 )
text = "Resume"
script = ExtResource( 5 )

[node name="Keybinds" type="Button" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -191.0
margin_top = 708.0
margin_right = 161.0
margin_bottom = 780.0
custom_fonts/font = SubResource( 2 )
text = "Keybinds"
script = ExtResource( 5 )

[node name="MainMenu" type="Button" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -205.0
margin_top = 474.0
margin_right = 188.0
margin_bottom = 546.0
custom_fonts/font = SubResource( 2 )
text = "Restart Game"
script = ExtResource( 5 )
load_scene = "res://scenes/MainMenu.tscn"

[node name="Intro" type="Button" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -357.0
margin_top = 592.0
margin_right = 331.0
margin_bottom = 664.0
custom_fonts/font = SubResource( 2 )
text = "Restart Game (Play Intro)"
script = ExtResource( 5 )
load_scene = "res://scenes/Intro.tscn"

[node name="Exit" type="Button" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -195.0
margin_top = 868.0
margin_right = 165.0
margin_bottom = 940.0
custom_fonts/font = SubResource( 2 )
text = "Exit to OS"

[node name="KeybindMenu" parent="." instance=ExtResource( 6 )]
visible = false

[connection signal="button_up" from="Resume" to="." method="_on_Resume_button_up"]
[connection signal="button_up" from="Keybinds" to="." method="_on_Keybinds_button_up"]
[connection signal="button_up" from="MainMenu" to="." method="_on_MainMenu_button_up"]
[connection signal="button_up" from="Intro" to="." method="_on_MainMenu_button_up"]
[connection signal="button_up" from="Exit" to="." method="_on_Exit_button_up"]
